# azure-speech-project

./: .env  .pre-commit-config.yaml  README.md  pyproject.toml  script.py  test.py
src/azure_speech_project/: __init__.py  __main__.py  transcribe.py
tests/: .gitignore
